<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/open"
            android:layout_span="3"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ctrl_o"
            android:layout_span="3"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:gravity="right"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/baris_kedua"
            android:layout_span="3"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:gravity="left" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/baris_kedua_sub"
            android:layout_span="3"
            android:gravity="right"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/baris_ketiga"
            android:layout_span="3"
            android:gravity="left"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/baris_ketiga_sub"
            android:layout_span="3"
            android:gravity="right"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/importt"
            android:layout_span="3"
            android:gravity="left"
            android:textColor="#000000"
            android:background="@android:color/holo_orange_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/import_sub"
            android:layout_span="3"
            android:gravity="right"
            android:textColor="#000000"
            android:background="@android:color/holo_orange_light"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/export"
            android:layout_span="3"
            android:gravity="left"
            android:textColor="#000000"
            android:background="@android:color/holo_orange_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/export_sub"
            android:layout_span="3"
            android:gravity="right"
            android:textColor="#000000"
            android:background="@android:color/holo_orange_light"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/quit"
            android:layout_span="3"
            android:textColor="#000000"
            android:background="@android:color/holo_green_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/quit_sub"
            android:layout_span="3"
            android:gravity="right"
            android:textColor="#000000"
            android:background="@android:color/holo_green_light"/>
    </TableRow>
</TableLayout>