<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayout">
    <EditText
        android:id="@+id/edt1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/reminder_note"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_1"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_2"/>
    </LinearLayout>
</LinearLayout>